--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,21 +11,23 @@
 .header__name {
   color: var(--primary--color);
   margin-left: 0.63rem;
+  flex: 1;
 }
 
 .header__nav-container {
-  width: 40%;
+  flex: 2;
 }
 
 .header__nav {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: flex-end;
 }
 
 .nav__link {
   color: var(--primary--color);
   text-decoration: none;
+  padding-right: 1.25rem;
 }
 
 /* Pro tablety (min šířka 768px) */
@@ -33,27 +35,11 @@
   .header {
     font-size: 1.88rem;
   }
-
-  .header__nav-container {
-    width: 30%;
-  }
-
-  .header__nav {
-    justify-content: space-evenly;
-  }
 }
 
 /* Pro desktop (min šířka 1024px) */
 @media (min-width: 1024px) {
   .header {
     font-size: 3.125rem;
-  }
-
-  .header__nav-container {
-    width: 30%;
-  }
-
-  .header__nav {
-    justify-content: space-evenly;
   }
 }
