--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,24 +1,31 @@
 .projectCard__container {
   color: var(--primary--background);
-  display: flex;
-  justify-content: center;
+  position: relative;
+  transform-style: preserve-3d;
 }
 
 .projectCard__card {
-max-width: 300px;
-min-height: 250px;
-background-color: var(--primary--color);
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-border-radius: 60px;
-flex-grow: 1;
-
+  width: 100%;
+  min-height: 300px;
+  background-color: var(--primary--color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 60px;
+  text-align: center;
+  position: absolute;
 }
+
+.projectCard__card--back {
+  background-color: var(--primary--background);
+  color: var(--primary--color);
+  border: 2px solid var(--primary--color);
+}
+
 .projectCard__heading {
-font-size: 2.5rem;
-margin: 0;
+  font-size: 2.5rem;
+  margin: 0;
 }
 
 .projectCard__link {
