--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,1 +1,15 @@
+.cardsContainer {
+  position: relative;
+  width: 100%;
+  height: 300px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 
+/* Pro tablety (min šířka 768px) */
+@media (min-width: 768px) {
+  .cardsContainer {
+    gap: 20px;
+  }
+}
