--- a/src/components/HomePageIntro/HomePageIntro.css
+++ b/src/components/HomePageIntro/HomePageIntro.css
@@ -1,33 +1,77 @@
 .homepage__container {
   padding-top: 3.125rem;
+  margin: 0.5rem;
 }
 
-.homepage__name, .homepage__role {
+.homepage__name,
+.homepage__role {
   margin: 0;
+  text-transform: uppercase;
+
 }
 
 .homepage__name {
-  text-transform: uppercase;
   color: var(--secondary--color);
   padding-bottom: 0.625rem;
-  font-size: 1.75rem;
+  font-size: 2rem;
 }
 
-.homepage__role {
-  font-size: 1.25rem;
+.homepage__role,
+.homepage__heading {
+  color: var(--tertiary--color);
+  font-size: 1.5rem;
 }
 
-.homepage__intro-text, .homepage__link {
-  color: var(--primary--color);
+.homepage__role:hover,
+.homepage__heading:hover {
+  color: var(--secondary--color);
 }
 
+.homepage__intro-text,
 .homepage__link {
+  color: var(--primary--color);
   font-weight: bold;
+  text-align: left;
+  font-size: 1.1rem;
 }
 
 .homepage__heading {
   text-align: center;
   text-transform: uppercase;
   margin-top: 2.75rem;
-  color: var(--secondary--color);
+}
+
+/* Pro tablety (min šířka 768px) */
+@media (min-width: 768px) {
+  .homepage__name {
+    font-size: 2.5rem;
+
+  }
+
+  .homepage__intro-text,
+  .homepage__link {
+    font-size: 1rem;
+
+  }
+
+}
+
+/* Pro desktop (min šířka 1024px) */
+@media (min-width: 1024px) {
+  .homepage__name {
+    font-size: 4rem;
+
+  }
+
+  .homepage__role,
+  .homepage__heading {
+    font-size: 2rem;
+
+  }
+
+  .homepage__intro-text,
+  .homepage__link {
+    font-size: 1.5rem;
+
+  }
 }
