--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -3,13 +3,13 @@
   position: absolute;
   width: 350px;
   height: 100%;
-
+  margin: 10px;
 }
 
 .projectCard__card {
   width: 100%;
   height: 100%;
-  background-color: var(--primary--color);
+  background-color: var(--secondary--color);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -20,9 +20,9 @@
 }
 
 .projectCard__card--back {
-  background-color: var(--primary--background);
-  color: var(--primary--color);
-  border: 2px solid var(--primary--color);
+  background-color: var(--secondary--color);
+  color: var(--primary--background);
+  border: 4px solid var(--tertiary--color);
 }
 
 .projectCard__heading {
