--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Playfair Display, Helvetica, Arial, sans-serif;
   --primary--background: #F6F7EB;
   --primary--color: #381D2A;
   --secondary--color: #EC91D8;
