--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -30,6 +30,10 @@
   padding-right: 1.25rem;
 }
 
+.nav__link:hover {
+color: var(--secondary--color);
+}
+
 /* Pro tablety (min šířka 768px) */
 @media (min-width: 768px) {
   .header {
