--- a/src/components/HomePageIntro/HomePageIntro.css
+++ b/src/components/HomePageIntro/HomePageIntro.css
@@ -21,11 +21,6 @@
   font-size: 1.5rem;
 }
 
-.homepage__role:hover,
-.homepage__heading:hover {
-  color: var(--secondary--color);
-}
-
 .homepage__intro-text,
 .homepage__link {
   color: var(--primary--color);
@@ -38,6 +33,10 @@
   text-align: center;
   text-transform: uppercase;
   margin-top: 2.75rem;
+}
+
+.homepage__link:hover {
+  color: var(--secondary--color);
 }
 
 /* Pro tablety (min šířka 768px) */
