--- a/src/components/HomePageIntro/HomePageIntro.css
+++ b/src/components/HomePageIntro/HomePageIntro.css
@@ -32,7 +32,7 @@
 .homepage__heading {
   text-align: center;
   text-transform: uppercase;
-  margin-top: 2.75rem;
+  margin: 2.75rem 0 2.75rem 0;
 }
 
 .homepage__link:hover {
