--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,9 +1,7 @@
 .cardsContainer {
-  position: relative;
-  height: 300px;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   margin: 1.88rem;
 }
 
@@ -11,6 +9,7 @@
 @media (min-width: 768px) {
   .cardsContainer {
     gap: 20px;
-    margin: 1.88rem;
+    flex-direction: row;
+    height: 100%;
   }
 }
