add fetched data to AboutCoursesDetail component, add styles to that component, add styles to contact css

--- a/src/components/AboutProjects/AboutProjects.css
+++ b/src/components/AboutProjects/AboutProjects.css
@@ -2,3 +2,8 @@
   color: var(--primary--color);
 }
 
+.projects__heading {
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--secondary--color);
+}
