--- a/src/components/AboutCoursesDetail/AboutCoursesDetail.css
+++ b/src/components/AboutCoursesDetail/AboutCoursesDetail.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding-bottom: 10px;
+  padding-bottom: 0.63rom;
 }
 
 .courses__company-description, h4, h3 {
