--- a/src/components/AboutIntro/AboutIntro.css
+++ b/src/components/AboutIntro/AboutIntro.css
@@ -1,4 +1,7 @@
-.about__introText {
+.about__heading, .about__texts {
+  text-align: center;
+}
+.about__container {
   color: var(--primary--color);
 }
 
@@ -9,4 +12,30 @@
 .about__link {
   color: var(--primary--color);
   font-weight: bold;
+}
+
+/* Pro tablety (min šířka 768px) */
+@media (min-width: 768px) {
+  .about__heading {
+    font-size: 1.88rem;
+  }
+
+  .about__texts {
+    padding: 0 1.25rem 0 1.25rem;
+  }
+
+}
+
+/* Pro desktop (min šířka 1024px) */
+@media (min-width: 1024px) {
+  .about__texts {
+    width: 80%;
+    font-size: 1.15rem;
+  }
+
+  .about__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
