--- a/src/components/AboutProjects/AboutProjects.css
+++ b/src/components/AboutProjects/AboutProjects.css
@@ -7,3 +7,20 @@
   text-transform: uppercase;
   color: var(--secondary--color);
 }
+
+/* Pro tablety (min šířka 768px) */
+@media (min-width: 768px) {
+  #projects {
+    padding: 0 1.25rem 0 1.25rem;
+  }
+
+  .projects__heading {
+    font-size: 1.88rem;
+  }
+
+}
+
+/* Pro desktop (min šířka 1024px) */
+@media (min-width: 1024px) {
+
+}
