--- a/src/components/AboutProjectsDetail/AboutProjectsDetail.css
+++ b/src/components/AboutProjectsDetail/AboutProjectsDetail.css
@@ -1,4 +1,5 @@
-.projects__heading, .projects__name {
+.projects__heading,
+.projects__name {
   text-align: center;
 
 }
@@ -25,7 +26,33 @@
 }
 
 .projects__link:hover {
-      color: var(--secondary--color);
+  color: var(--secondary--color);
 
 }
 
+.projects__container {
+  padding-bottom: 1.25rem;
+  text-align: center;
+}
+
+/* Pro tablety (min šířka 768px) */
+@media (min-width: 768px) {
+  .projects__desc {
+  border-bottom: 2px solid var(--secondary--color);
+}
+}
+
+/* Pro desktop (min šířka 1024px) */
+@media (min-width: 1024px) {
+  .projects__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .projects__name,
+  .projects__links,
+  .projects__desc {
+    width: 80%;
+  }
+}
