--- a/src/components/AboutSkills/AboutSkills.css
+++ b/src/components/AboutSkills/AboutSkills.css
@@ -15,3 +15,36 @@
 li::marker {
   color: var(--tertiary--color);
 }
+
+/* Pro tablety (min šířka 768px) */
+@media (min-width: 768px) {
+  .skills__heading {
+    font-size: 1.88rem;
+  }
+
+  .skills__headings {
+    text-align: center;
+  }
+
+  .skills__detail {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+/* Pro desktop (min šířka 1024px) */
+@media (min-width: 1024px) {
+  .skills__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .skills__detail {
+    width: 80%;
+  }
+
+  li {
+    font-size: 1.15rem;
+  }
+}
